syntax = "proto3";

option csharp_namespace = "ProjectOrigin.Primitives";

package ProjectOrigin.Registry.v1;

message FederatedStreamId {
  string Registry = 1;
  Uuid StreamId = 2;
}

message Uuid {
  string Value = 1;
}
