syntax = "proto3";

import "primitives.proto";

package ProjectOrigin.Register.v1;

service CommandService {
    rpc SubmitCommand (Command) returns (CommandStatus);
}

enum CommandState {
    Failed = 0;
    Succeeded = 1;
}

message CommandStatus {
    bytes Id = 1;
    CommandState State = 2;
    repeated CommandStepStatus Steps = 3;
}

message CommandStepStatus {
    CommandState State = 1;
    string Error = 2;
}

message Command {
    bytes Id = 1;
    repeated CommandStep Steps = 2;
}

message CommandStep {
    ProjectOrigin.Register.v1.FederatedStreamId RoutingId = 1;
    SignedEvent SignedEvent = 2;
    repeated ProjectOrigin.Register.v1.FederatedStreamId OtherStreams = 3;
}

message SignedEvent {
    string Type = 1;
    bytes Payload = 2;
    bytes Signature = 3;
}
